sql_select.cc:   Additional fix for the bug#30245.